Version 1.9.0 (#216)
* Add "Icon" Section to Phase Config. (#178)

* Add "Icon" Section to Phase Config.

* Fix Code Smells/Inconsistencies

* Added badges

* Remove NPE potential bugs

* Fixes incorrect commands and permissions (#128)

Update to the AOneBlock command and permission set instead of using AcidIsland and BSkyBlock.

Co-authored-by: tastybento <tastybento@users.noreply.github.com>

* Update Vietnamese (#143)

* Expose BentoBox 1.14 onRespawnCommands. (#158)

BentoBoxWorld/BentoBox#1719

* Expose BentoBox 1.16 portal generation mechanics. (#159)

BentoBoxWorld/BentoBox#1718

* Remove handlers from events (fixes #161) (#162)

* Revert "Remove handlers from events (fixes #161) (#162)" (#180)

This reverts commit 4615d58552953c41675e1465d88660c0b15b81f6.

* Version 1.8.1

* Add Hologram Support to AOneBlock Phases (#179)

* Add Holograms to AOneBlock Phases

* Add Holograms to AOneBlock Phases

* Fix Holograms Not Loading/Add Default Holograms & Fix Hologram Persistence

* Fix Merge of Develop, Github's Web Interface is Bad

* Convert to Addon#AllLoaded for Hologram Loading

* Update 0_plains.yml (#181)

* German translation (#184)

* Translate de.yml via GitLocalize

* Update de.yml

Co-authored-by: tastybento <tastybento@wasteofplastic.com>
Co-authored-by: tastybento <tastybento@users.noreply.github.com>

* Prevent NPE's

* Fix sonarcloud complaints about potential NPE

* Remove sonar profile

* Convert to record

* Use Optional isEmpty

* Update vi.yml (#186)

* Fixed bug if HolographicDisplays is not present.

The #179 PR causes the BlockListener to not register if
HolographicDisplays is not present.
https://github.com/BentoBoxWorld/AOneBlock/issues/189

This puts all the HolographicDisplays code in its own class that only
gets called if HolographicDisplays exists. It also removes the static
getInstance method.

* Drop chest items when chest is broken.

If drop on top setti